--- a/index.html
+++ b/index.html
@@ -175,6 +175,27 @@
             text: "וַֽיַּחֲלֹ֗ם וְהִנֵּ֤ה סֻלָּם֙ מֻצָּ֣ב אַ֔רְצָה וְרֹאשׁ֖וֹ מַגִּ֣יעַ הַשָּׁמָ֑יְמָה וְהִנֵּה֙ מַלְאֲכֵ֣י אֱלֹהִ֔ים עֹלִ֥ים וְיֹרְדִ֖ים בּֽוֹ׃",
             audio: "ויצא3.mp3",
           },
+          // Pasuk 4 (Bereshit 28:13) - Parts
+          {
+            title: "Bereshit 28:13 - Part 1",
+            text: "וְהִנֵּ֨ה יְהֹוָ֜ה נִצָּ֣ב עָלָיו֮ וַיֹּאמַר֒",
+            audio: "ויצא4א.mp3",
+          },
+          {
+            title: "Bereshit 28:13 - Part 2",
+            text: "אֲנִ֣י יְהֹוָ֗ה אֱלֹהֵי֙ אַבְרָהָ֣ם אָבִ֔יךָ וֵאלֹהֵ֖י יִצְחָ֑ק",
+            audio: "ויצא4ב.mp3",
+          },
+          {
+            title: "Bereshit 28:13 - Part 3",
+            text: "הָאָ֗רֶץ אֲשֶׁ֤ר אַתָּה֙ שֹׁכֵ֣ב עָלֶ֔יהָ לְךָ֥ אֶתְּנֶ֖נָּה וּלְזַרְעֶֽךָ׃",
+            audio: "ויצא4ג.mp3",
+          },
+          {
+            title: "Bereshit 28:13 - Full Pasuk",
+            text: "וְהִנֵּ֨ה יְהֹוָ֜ה נִצָּ֣ב עָלָיו֮ וַיֹּאמַר֒ אֲנִ֣י יְהֹוָ֗ה אֱלֹהֵי֙ אַבְרָהָ֣ם אָבִ֔יךָ וֵאלֹהֵ֖י יִצְחָ֑ק הָאָ֗רֶץ אֲשֶׁ֤ר אַתָּה֙ שֹׁכֵ֣ב עָלֶ֔יהָ לְךָ֥ אֶתְּנֶ֖נָּה וּלְזַרְעֶֽךָ׃",
+            audio: "ויצא4.mp3",
+          },
         ];
 
         let points = 0;
